[package]
name = "ansic"
version = "0.1.0"
edition = "2024"
authors = ["zeondev"]
license = "Apache-2.0"
description = "Ansic is a crate which does ansi parsing in a dynamic DSL and at compile time for efficient and zero cost ansi styling."
repository = "https://github.com/zeonzip/ansic"
homepage = "https://github.com/zeonzip/ansic"
documentation = "https://docs.rs/ansic"
keywords = ["macro", "ansi", "zerocost", "proc-macro", "compile-time"]
categories = ["development-tools", "text-processing", "command-line-interface"]
readme = "README.md"

[dependencies]
ansic-macros = "0.1.0"

[features]
utils = []
